fix: fix modal z-index

--- a/styles/components/modal.css
+++ b/styles/components/modal.css
@@ -1,5 +1,5 @@
 .modal {
-  z-index: 20;
+  z-index: 999;
   width: max-content;
   max-width: 80vw;
   min-height: 200px;
@@ -65,7 +65,7 @@
   width: 100%;
   height: 100%;
   background-color: rgba(80, 80, 80, 0.4);
-  z-index: 5;
+  z-index: 998;
   display: flex;
   justify-content: center;
   align-items: center;
